# 5GSimulator

./: .gitignore  CMakeLists.txt  READMe.md
src/: main.cpp
